# VRPTW-Demo

./: .gitignore  Hybrid_RL_Metaheuristic_Logistics.ipynb  README.md  main.py  pyproject.toml  requirements.txt
data/: file_manifest.json
data/Solomon/: c101.txt
models/: dqn_1000_C1_10_1.safetensor  dqn_1000_C1_10_10.safetensor  dqn_200_C1_2_1.safetensor  dqn_200_C2_2_1.safetensor  dqn_200_R1_2_1.safetensor  dqn_200_R2_2_1.safetensor  dqn_200_RC1_2_1.safetensor  dqn_200_RC2_2_1.safetensor  dqn_RC101.safetensors  dqn_RC102.safetensors  dqn_RC103.safetensors  dqn_RC104.safetensors  dqn_RC105.safetensors  dqn_RC106.safetensors  dqn_RC107.safetensors  dqn_RC108.safetensors  dqn_RC201.safetensors  dqn_RC202.safetensors  dqn_RC203.safetensors  dqn_RC204.safetensors  dqn_RC205.safetensors  dqn_RC206.safetensors  dqn_RC207.safetensors  dqn_RC208.safetensors  dqn_alns_RC101.safetensors  dqn_alns_RC102.safetensors  dqn_alns_RC103.safetensors  dqn_alns_RC104.safetensors  dqn_alns_RC105.safetensors  dqn_alns_RC106.safetensors  dqn_alns_RC107.safetensors  dqn_alns_RC108.safetensors  dqn_alns_RC201.safetensors  dqn_alns_RC202.safetensors  dqn_alns_RC203.safetensors  dqn_alns_RC204.safetensors  dqn_alns_RC205.safetensors  dqn_alns_RC206.safetensors  dqn_alns_RC207.safetensors  dqn_alns_RC208.safetensors  (+8 more)
ref_papers/: alns_baseline.py  alns_pseudo_code.txt  colab.py  dqn_alns.py
src/: __init__.py  data_loader.py  endpoints.py  geo_client.py  schemas.py
src/api/: __init__.py  routes.py  schemas.py
src/backend/: alns.py  api.py  app.py  data_loader.py  dqn.py  dummy_solvers.py  (+5 more)
(+42 files in other folders)
