[project]
name = "vrptw-demo"
version = "0.1.0"
description = "Web-based demonstration application for the Vehicle Routing Problem with Time Windows (VRPTW)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "ortools>=9.7.0",
    "folium>=0.14.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
